--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Self-Cleaning Cat Litter Boxes – Hassle-Free Pet Care</title>
+  <title>Self-Cleaning Cat Litter Boxes â€“ Hassle-Free Pet Care</title>
   <meta name="description" content="Explore top-rated self-cleaning cat litter boxes for a cleaner, odor-free home. Find tips, reviews, and buying guides for cat owners.">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -23,7 +23,7 @@
 
   <main>
     <h1>Best Self-Cleaning Cat Litter Boxes for Busy Cat Owners</h1>
-    <p>Keeping your cat’s litter box clean is no longer a daily hassle. Our guide to the best self-cleaning cat litter boxes shows you how to maintain a clean home while ensuring your cat stays happy and healthy. Whether you’re a busy professional or a cat-loving family, these automatic litter boxes save time, reduce odor, and make litter maintenance effortless.</p>
+    <p>Keeping your catâ€™s litter box clean is no longer a daily hassle. Our guide to the best self-cleaning cat litter boxes shows you how to maintain a clean home while ensuring your cat stays happy and healthy. Whether youâ€™re a busy professional or a cat-loving family, these automatic litter boxes save time, reduce odor, and make litter maintenance effortless.</p>
 
     <h2>Why Choose a Self-Cleaning Litter Box?</h2>
     <p>Self-cleaning litter boxes eliminate the need for daily scooping. These innovative solutions offer:</p>
@@ -43,5 +43,22 @@
   <footer>
     <p>&copy; 2026 Self-Cleaning Cat Litter Boxes</p>
   </footer>
+</body>
+
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Website</title>
+</head>
+<body>
+  <h1>My Image Gallery</h1>
+
+  <img src="images/image1.jpg" alt="Image 1" width="300">
+  <img src="images/image2.jpg" alt="Image 2" width="300">
+  <img src="images/image3.jpg" alt="Image 3" width="300">
+
 </body>
 </html>
