--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 </head>
 <body>
   <h1>My Image Gallery</h1>
-
-  <img src="images/image1.jpg" alt="Image 1" width="300">
-  <img src="images/image2.jpg" alt="Image 2" width="300">
-  <img src="images/image3.jpg" alt="Image 3" width="300">
-
+<img src="Images/cat1.jpg" alt="Cat 1">
+<img src="Images/cat2.jpg" alt="Cat 2">
+<img src="Images/cat3.jpg" alt="Cat 3">
+<img src="Images/cat4.jpg" alt="Cat 4">
 </body>
 </html>
+
