--- a/index.html
+++ b/index.html
@@ -53,12 +53,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Website</title>
 </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cat Lit</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .gallery img {
+            width: 200px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+    </style>
+</head>
 <body>
-  <h1>My Image Gallery</h1>
-<img src="Images/cat1.jpg" alt="Cat 1">
-<img src="Images/cat2.jpg" alt="Cat 2">
-<img src="Images/cat3.jpg" alt="Cat 3">
-<img src="Images/cat4.jpg" alt="Cat 4">
+    <h1>Cat Lit Gallery</h1>
+    <div class="gallery">
+        <img src="Images/cat1.jpg" alt="Cat 1">
+        <img src="Images/cat2.jpg" alt="Cat 2">
+        <img src="Images/cat3.jpg" alt="Cat 3">
+        <img src="Images/cat4.jpg" alt="Cat 4">
+    </div>
 </body>
 </html>
+
+</html>
+
 
